# personal-ai-infrastructure

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  main.py  pyproject.toml
adapters/: base.py  registry.py
adapters/nextcloud/: adapter.py
database/: __init__.py  schema.sql
decision/: __init__.py  decision.py  requirement.py
docs/: 01-vision.md  02-research-question.md  04-architecture.ms  05-roadmap.md  README.md  Research Journal.md  Roadmap.md  architecture.md  database-migrations.md
docs/Journal/: 001-Why-I-Started-Building-Personal-AI-Infrastructure.md  2026-7-03-How-Digital-Life-Enters-Personal-AI-Infrastructure.md
docs/adr/: 000-adr-guidelines.md  001-domain-model-v1.md  002-core-v0.2-migration-plan.md  002-domain-model-v1-migration-plan.md  003-engineering-rules-for-ai-assisted-development.md
docs/architecture/: 01-overview.md  02-provider.md  03-provider-adapter.md  04-provider-fact.md  05-sync-engine.md  06-identity.md  07-decision.md  08-repository.md  09-world-model.md  10-capability.md  11-sync-lifecycle.md
docs/context/: CURRENT_CONTEXT.md
docs/decisions/: README.md
docs/discovery/: immich.md
docs/journal/: 2026-6-27-What-Is-Personal-AI-Infrastructure.md  2026-7-03-How-Should-Personal-Infrastructure-Maintain-Digital-Assets.md
docs/releases/: v0.4.md
identity/: __init__.py  matcher.py
migrations/: env.py
models/: asset_source.py
repository/: __init__.py  base.py
tests/: test_database_guard.py  test_immich_adapter.py  test_main.py  test_matcher.py  test_query.py  test_schema_preflight.py  test_settings.py
(+55 files in other folders)
