[project]
name = "pdi"
version = "0.1.0"
description = "Personal Digital Infrastructure"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "requests>=2.32,<3.0",
    "SQLAlchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-dotenv>=1.1,<2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]