[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"


[project]
name = "pdi"
version = "0.1.0"
description = "Personal Digital Infrastructure"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "alembic>=1.18,<2.0",
    "requests>=2.32,<3.0",
    "SQLAlchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-dotenv>=1.1,<2.0",
    "pydantic-settings>=2.0,<3.0",
]


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
